force-app/main/default/objects/Activity/fields/DailyReportNoConnection__c.field-meta.xml
<CustomField>
    <fullName>DailyReportNoConnection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>関連日報なし</label>
    <type>Checkbox</type>
</CustomField>