force-app/main/default/objects/Activity/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>[表示用]終了時間</label>
    <length>20</length>
    <type>Text</type>
</CustomField>