force-app/main/default/objects/Activity/fields/PreviousDayAction__c.field-meta.xml
<CustomField>
    <fullName>PreviousDayAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>前日の行動</label>
    <type>Checkbox</type>
</CustomField>