force-app/main/default/objects/Activity/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>[表示用]開始時間</label>
    <length>20</length>
    <type>Text</type>
</CustomField>